# audiodecoder.qsf

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.qsf/: addon.xml  addon.xml.in
audiodecoder.qsf/resources/language/resource.language.ca_es/: strings.po
audiodecoder.qsf/resources/language/resource.language.de_de/: strings.po
audiodecoder.qsf/resources/language/resource.language.en_gb/: strings.po
audiodecoder.qsf/resources/language/resource.language.es_es/: strings.po
audiodecoder.qsf/resources/language/resource.language.es_mx/: strings.po
audiodecoder.qsf/resources/language/resource.language.eu_es/: strings.po
audiodecoder.qsf/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.qsf/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.qsf/resources/language/resource.language.it_it/: strings.po
audiodecoder.qsf/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.qsf/resources/language/resource.language.ru_ru/: strings.po
audiodecoder.qsf/resources/language/resource.language.zh_cn/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi_highly_quixotic-note.txt
lib/Highly_Quixotic/: CMakeLists.txt
lib/Highly_Quixotic/Core/: qsound.c
lib/highly_quixotic/Core/: qsound.c
lib/psflib/: CMakeLists.txt
src/: QSFCodec.cpp  QSFCodec.h  QSoundRom.h  RingBuffer.cpp  RingBuffer.h
